# rust-fullstack

./: Cargo.toml  README.md  tailwind.config.js
src/: main.rs
src/hot_reload/: watcher.rs
src/view/: index.html  layout.html.twig
src/view/pages/: index.html.twig
