[package]
name = "tbertrand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tokio"] }
futures = "0.3.30"
futures-util = "0.3.30"
notify = { version = "6.1.1", default-features = false }
pathdiff = "0.2.1"
project-root = "0.2.2"
shells = "0.2.0"
tera = "1.19.1"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
